# nova

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.claude/skills/nova-simulator/: SKILL.md
.config/: dotnet-tools.json
.github/workflows/: ci.yml
configs/overrides/_finalize/: chemistry.cfg  gimbal-inherit.cfg  internal-antennas.cfg
configs/overrides/command/: probeCoreOcto2_v2.cfg
configs/overrides/communications/: HighGainAntenna.cfg  HighGainAntenna5.cfg  RelayAntenna100.cfg  RelayAntenna5.cfg  RelayAntenna50.cfg  SurfAntenna.cfg  commDish.cfg  longAntenna.cfg  mediumDishAntenna.cfg  restock-antenna-stack-2.cfg  restock-antenna-stack-3.cfg  restock-relay-radial-2.cfg
configs/overrides/electrical/: FuelCell.cfg  FuelCellArray.cfg  HECS2_ProbeCore.cfg  Mark1Cockpit.cfg  Mark2Cockpit.cfg  MpoProbe.cfg  MtmStage.cfg  RTG.cfg  cupola.cfg  landerCabinSmall.cfg  mk1-3pod.cfg  mk1pod_v2.cfg  mk2Cockpit_Inline.cfg  mk2Cockpit_Standard.cfg  mk2DroneCore.cfg  mk2LanderCabin_v2.cfg  mk3Cockpit_Shuttle.cfg  probeCoreCube.cfg  probeCoreHex_v2.cfg  probeCoreOcto2_v2.cfg  probeCoreOcto_v2.cfg  probeCoreSphere_v2.cfg  probeStackLarge.cfg  probeStackSmall.cfg  restock-drone-core-0625-1.cfg  restock-drone-core-1875-1.cfg  restock-drone-core-375-1.cfg  restock-mk2-pod.cfg  restock-pod-sphere-1.cfg  restock-pod-sphere-2.cfg  restock-pod-sphere-3.cfg  roverBody_v2.cfg  rtg.cfg  solarPanelGigantor.cfg  solarPanelOx10C.cfg  solarPanelOx10L.cfg  solarPanelOx4L.cfg  solarPanelOx4W.cfg  solarPanelOxStat.cfg  solarPanelSp100.cfg  (+7 more)
configs/overrides/propulsion/: HECS2_ProbeCore.cfg  Mark1Cockpit.cfg  Mark2Cockpit.cfg  MpoProbe.cfg  MtmStage.cfg  adapterMk3-Mk2.cfg  adapterMk3-Size2.cfg  adapterMk3-Size2Slant.cfg  adapterSize2-Mk2.cfg  adapterSize2-Size1.cfg  adapterSize2-Size1Slant.cfg  adapterSize3-Mk3.cfg  advSasModule.cfg  asasmodule1-2.cfg  cupola.cfg  externalTankCapsule.cfg  externalTankRound.cfg  externalTankToroid.cfg  fuelTankJumbo64.cfg  fuelTankOscarB.cfg  fuelTankS3-14400.cfg  fuelTankS3-3600.cfg  fuelTankS3-7200.cfg  fuelTankT100.cfg  fuelTankT200.cfg  fuelTankT400.cfg  fuelTankT800.cfg  fuelTankX200-16.cfg  fuelTankX200-32.cfg  fuelTankX200-8.cfg  ionEngine.cfg  jetEngineAfterburning.cfg  jetEngineBasic.cfg  jetEngineBig.cfg  jetEngineTurbo.cfg  landerCabinSmall.cfg  (+130 more)
crates/nova-highs/: Cargo.toml
crates/nova-highs/src/: lib.rs
crates/nova-ksp/: Cargo.toml  build.rs
crates/nova-ksp/src/: arena.rs  lib.rs  proto.rs  topic.rs  vessel.rs  world.rs
crates/nova-ksp/src/state/: battery.rs  command.rs  mod.rs
crates/nova-ksp/tests/: ffi_smoke.rs
crates/nova-sim/: Cargo.toml
crates/nova-sim/src/: atmosphere.rs  buffer.rs  ephem.rs  fixtures.rs  lib.rs  math.rs  orbit.rs  resource.rs  sim_clock.rs  situation.rs  world.rs  world_context.rs
crates/nova-sim/src/comms/: allocator.rs  antenna.rs  endpoint.rs  ground_station.rs  job.rs  link.rs  link_horizon.rs  max_rate_path.rs  mod.rs  motion.rs  occluder_set.rs  occlusion.rs  parameters.rs  rate_buckets.rs  system.rs
crates/nova-sim/src/components/: accumulator.rs  battery.rs  command.rs  comms.rs  engine.rs  fuel_cell.rs  mod.rs  solar_panel.rs  tank.rs
crates/nova-sim/src/resources/: mod.rs  solar_forecaster.rs
crates/nova-sim/src/systems/: mod.rs  process.rs  staging.rs
crates/nova-sim/tests/: battery_tick.rs  command.rs  comms_allocation.rs  comms_antenna.rs  comms_broadcast_receive.rs  comms_endpoint.rs  comms_ground_station.rs  comms_link_horizon.rs  comms_motion.rs  comms_network.rs  comms_occluder_set.rs  comms_occlusion.rs  comms_packet.rs  comms_rate_buckets.rs  comms_world_tick.rs  fuel_cell.rs  process.rs  scenario.rs  solar_forecaster.rs  solar_panel.rs  staging.rs  tick.rs
crates/nova-telemetry/: Cargo.toml
crates/nova-telemetry/src/: frame.rs  lib.rs  registry.rs
crates/nova-telemetry/src/topics/: mod.rs  part.rs  vessel_structure.rs
crates/nova-telemetry/tests/: part_snapshot.rs
crates/save-cli/: Cargo.toml  build.rs
crates/save-cli/src/: dump.rs  io.rs  launch.rs  main.rs  proto.rs
crates/save-cli/tests/: smoke.rs
docs/: lp_hygiene.md
mod/: Nova.sln
mod/Nova/: HarmonyPatcher.cs  Logger.cs  Nova.csproj  NovaCli.cs  NovaMod.cs  NovaRenderScaleAddon.cs  NovaScienceAddon.cs  NovaUiOverrideAddon.cs
mod/Nova.Core/: Nova.Core.csproj
mod/Nova.Ffi.Generated/: Nova.Ffi.Generated.csproj
mod/Nova.Sim/: Nova.Sim.csproj  Program.cs
mod/Nova.Tests/: Nova.Tests.csproj
proto/: nova.proto
ui/: package-lock.json  package.json  tsconfig.base.json  tsconfig.json
(+408 files in other folders)
