[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
prost-build = "0.13"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
