[package]
name = "nova-sim"
description = "Nova simulation engine — Keplerian ephemeris, resource flow, multi-vessel ticking. Pure Rust, no FFI."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "nova_sim"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
approx = "0.5"
