[package]
name = "nova-sim"
description = "Nova simulation engine — Keplerian ephemeris, resource flow, multi-vessel ticking. All-safe Rust; FFI to the HiGHS LP solver is quarantined behind the nova-highs wrapper."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "nova_sim"
path = "src/lib.rs"

[dependencies]
nova-highs = { path = "../nova-highs" }

[dev-dependencies]
approx = "0.5"
