[package]
name = "nova-save-cli"
description = "Inspector for Nova .nvs (save) and .nvc (craft) binary files."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "nova-save-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
prost.workspace = true
sha2.workspace = true
uuid.workspace = true

[build-dependencies]
prost-build.workspace = true
